--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
 <html>
-    <head>
+<head>
+<style>
+footer {
+  text-align: center;
+  padding: 30px;
+  background-color: green;
+  color: white;
+}
+</style>
+</head>
+<body>
 
-    </head>
+<footer>
+  <p>w3<br>
+  <a href="fotter@gmail.com">footer@gmail.com</a></p>
+  <a href="https://www.w3schools.com/tags/tag_footer.asp">w3 page</a>
+  <a href="https://www.w3schools.com/tags/tag_footer.asp">w3 page 2</a>
+  <a href="https://www.w3schools.com/tags/tag_footer.asp">w3 page 3</a>
+  <a href="https://www.w3schools.com/tags/tag_footer.asp">w3 page 4</a>
+  <a href="https://www.w3schools.com/tags/tag_footer.asp">w3 page 5</a>
+  <img src="w3 bild.png" alt="w3" width="100" height="100">
+</footer>
 
-    <body>
-        <header></header>
-        <navbar></navbar>
-        <main></main>
-        <footer></footer>
-    </body>
+</body>
+</html>
