--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css">
 <div class="sidebar-container">
     <aside class="sidebar">
         <p class="cat1">HTML</p>
