--- a/index.html
+++ b/index.html
@@ -179,116 +179,50 @@
         <p>
             Beginner's tutorials
             Our HTML Learning Area features multiple modules that teach HTML from the ground up — no previous knowledge required.
-            
             Introduction to HTML
-
             This module sets the stage, getting you used to important concepts and syntax such as looking at applying HTML to text, how to create hyperlinks, and how to use HTML to structure a web page.
-
             Multimedia and embedding
-
             This module explores how to use HTML to include multimedia in your web pages, including the different ways that images can be included, and how to embed video, audio, and even entire other webpages.
-
-
             HTML tables
-
             Representing tabular data on a webpage in an understandable, accessible way can be a challenge. This module covers basic table markup, along with more complex features such as implementing captions and summaries.
-
-
-
             HTML forms
-
-
             Forms are a very important part of the Web — these provide much of the functionality you need for interacting with websites, e.g. registering and logging in, sending feedback, buying products, and more. This module gets you started with creating the client-side/front-end parts of forms.
-
-
             Use HTML to solve common problems
-
             Provides links to sections of content explaining how to use HTML to solve very common problems when creating a web page: dealing with titles, adding images or videos, emphasizing content, creating a basic form, etc.
-
-
             Advanced topics
-
             CORS enabled image
-
             The crossorigin attribute, in combination with an appropriate CORS header, allows images defined by the <img> element to be loaded from foreign origins and used in a <canvas> element as if they were being loaded from the current origin.
-
-
-
                 CORS settings attributes
-
                 Some HTML elements that provide support for CORS, such as <img> or <video>, have a crossorigin attribute (crossOrigin property), which lets you configure the CORS requests for the element's fetched data.
-
-
                     Preloading content with rel="preload"
-
                     The preload value of the <link> element's rel attribute allows you to write declarative fetch requests in your HTML <head>, specifying resources that your pages will need very soon after loading, which you therefore want to start preloading early in the lifecycle of a page load, before the browser's main rendering machinery kicks in. This ensures that they are made available earlier and are less likely to block the page's first render, leading to performance improvements. This article provides a basic guide to how preload works.
-
-
                         Reference
-
                         HTML reference
-
                         HTML consists of elements, each of which may be modified by some number of attributes. HTML documents are connected to each other with links.
-
-
                         HTML element reference
-
                         Browse a list of all HTML elements.
-
-
                         HTML attribute reference
-
                         Elements in HTML have attributes. These are additional values that configure the elements or adjust their behavior in various ways.
-
-
                         Global attributes
-
                         Global attributes may be specified on all HTML elements, even those not specified in the standard. This means that any non-standard elements must still permit these attributes, even though those elements make the document HTML5-noncompliant.
-
-
                         Inline-level elements and block-level elements
-
                         HTML elements are usually "inline-level" or "block-level" elements. An inline-level element occupies only the space bounded by the tags that define it. A block-level element occupies the entire space of its parent element (container), thereby creating a "block box".
-
-
                         Guide to media types and formats on the web
-
-                        The <audio> and <video> elements allow you to play audio and video media natively within your content without the need for external software support.
-
-
+                        The audio and video elements allow you to play audio and video media natively within your content without the need for external software support.
                             HTML content categories
-
                             HTML is comprised of several kinds of content, each of which is allowed to be used in certain contexts and is disallowed in others. Similarly, each context has a set of other content categories it can contain and elements that can or can't be used in them. This is a guide to these categories.
-
-
                             Quirks mode and standards mode
-
                             Historical information on quirks mode and standards mode.
-
-
                             Related topics
-
-
                             Applying color to HTML elements using CSS
-
                             This article covers most of the ways you use CSS to add color to HTML content, listing what parts of HTML documents can be colored and what CSS properties to use when doing so. Includes examples, links to palette-building tools, and more.
-
-
                             Found a content problem with this page?
-
                             Edit the page on GitHub.
-
                             Report the content issue.
-
                             View the source on GitHub.
-
                             Want to get more involved? Learn how to contribute.
-
                             This page was last modified on Jul 18, 2023 by MDN contributors.
         </p>
-
-
     </div>
-
     </body>
 </html>
